--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test:db": "node db.js",
+    "migrate:db": "node migrate.js"
   },
   "keywords": [],
   "author": "",
